--- a/WebContent/pages/index.html
+++ b/WebContent/pages/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="../js/jquery/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="../js/scripts/scriptCore.js"></script>
     </head>
-    <body>mi primer texto
+    <body>
+        
     </body>
 </html>
