Se suben elementos para seleccion de componentes por atributo

--- a/WebContent/pages/index.html
+++ b/WebContent/pages/index.html
@@ -5,8 +5,14 @@
         <title>P&aacute;gina inicial del curso: PENTWI01 Create HTML5 Apps with jQuery Jump Start</title>
         <script type="text/javascript" src="../js/jquery/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="../js/scripts/scriptCore.js"></script>
+        <script type="text/javascript" src="../js/libs/jquery.form-validator.min.js"></script>
     </head>
     <body>
-        
+        <form id="mainForm" action="">
+            <input id="inputAtributo" type="text" atributo="atributo2" class="captura"/>
+            <input id="inputValor" type="text" atributo="atributo1" class="captura"/>
+            <input type="button" value="Validar" id="buttonValidar" class="disparo"/>
+            <p id="mensajes">
+        </form>
     </body>
 </html>
